<resources>
    <string name="app_name">TP 3 Fundamentos</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="iniciar_analise">Iniciar análise</string>
    <string name="confirmar">Confirmar</string>
    <string name="analisador_de_perfil_de_investidor">Analisador de Perfil de Investidor</string>
    <string name="metodologia_banco_paulista">Metodologia adaptada do questionário do Banco Paulista, disponível em https://www.bancopaulista.com.br/Arquivos/QuestionarioAPI.pdf</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Questão 1 -->
    <string name="texto_q1_titulo">Por quanto tempo você pretende deixar seu dinheiro investido?</string>
    <string name="texto_q1_alternativa_a">Menos de 6 meses</string>
    <string name="texto_q1_alternativa_b">Entre 6 meses e 1 ano</string>
    <string name="texto_q1_alternativa_c">Entre 1 ano e 3 anos</string>
    <string name="texto_q1_alternativa_d">Acima de 3 anos</string>

    <!-- Questão 2 -->
    <string name="texto_q2_titulo"> Qual o objetivo desse investimento?</string>
    <string name="texto_q2_alternativa_a">Preservação do capital para não perder valor ao longo do tempo, assumindo baixos riscos de perdas</string>
    <string name="texto_q2_alternativa_b">Aumento gradual do capital ao longo do tempo, assumindo riscos moderados</string>
    <string name="texto_q2_alternativa_c">Aumento do capital acima da taxa de retorno média do mercado, mesmo que isso implique assumir riscos de perdas elevadas</string>
    <string name="texto_q2_alternativa_d">Obter no curto prazo retornos elevados e signficativamente acima da taxa de retorno média do mercado, assumindo riscos elevados</string>

    <!-- Questão 3 -->
    <string name="texto_q3_titulo"> Qual das alternativas melhor classifica sua formação e experiência com o mercado financeiro?</string>
    <string name="texto_q3_alternativa_a"> Não possuo formação acadêmica ou conhecimento do mercado financeiro</string>
    <string name="texto_q3_alternativa_b">Possuo formação acadêmica na área financeira, mas não tenho experiência com o mercado financeiro </string>
    <string name="texto_q3_alternativa_c"> Possuo formação acadêmica em outra área, mas possuo conhecimento do mercado financeiro </string>
    <string name="texto_q3_alternativa_d">Possuo formação acadêmica na área financeira ou pleno conhecimento do mercado financeiro</string>

    <!-- Questão 4 -->
    <string name="texto_q4_titulo"> Considerando seus rendimentos regulares, qual a porcentagem você pretende reservar para aplicações financeiras?</string>
    <string name="texto_q4_alternativa_a">No máximo 25%</string>
    <string name="texto_q4_alternativa_b">Entre 25,01 e 50%</string>
    <string name="texto_q4_alternativa_c">Acima de 50%</string>

    <!-- Questão 5 -->
    <string name="texto_q5_titulo">Caso as suas aplicações sofressem uma queda superior a 30%, o que você faria?</string>
    <string name="texto_q5_alternativa_a">Resgataria toda a aplicação e aplicaria na poupança</string>
    <string name="texto_q5_alternativa_b">Manteria aplicação aguardando uma melhora do mercado</string>
    <string name="texto_q5_alternativa_c">Aumentaria a aplicação para aproveitar as oportunidades do mercado</string>

    <!-- Questão 6 -->
    <string name="texto_q6_titulo">Como está distribuído o seu patrimônio? </string>
    <string name="texto_q6_alternativa_a">Meu patrimônio não está aplicado ou está todo aplicado em renda fixa e/ou imóveis </string>
    <string name="texto_q6_alternativa_b">Menos de 25% em renda variável e o restante em renda fixa e/ou imóveis</string>
    <string name="texto_q6_alternativa_c">Entre 25,01 e 50% aplicado em renda variável e o restante em renda fixa e/ou imóveis</string>
    <string name="texto_q6_alternativa_d">Acima de 50% em renda variável </string>

    <!-- Questão 7 -->
    <string name="texto_q7_titulo">Em relação as aplicações e rendimentos, em qual dessas situações você se enquadra? </string>
    <string name="texto_q7_alternativa_a">Conto com o rendimento dessas aplicações para complementar minha renda mensal </string>
    <string name="texto_q7_alternativa_b">Eventualmente posso resgatar parte das aplicações para fazer frente aos meus gastos. Contudo, não tenho intenção de resgatar no curto prazo e pretendo fazer aplicações regulares</string>
    <string name="texto_q7_alternativa_c">Não tenho intenção de resgatar no curto prazo, mas não pretendo realizar novas aplicações</string>
    <string name="texto_q7_alternativa_d">Não tenho intenção de resgatar no curto prazo e ainda pretendo fazer aplicações regulares</string>

    <!-- Questão 8 -->
    <string name="texto_q8_titulo">Qual sua faixa de renda mensal média?</string>
    <string name="texto_q8_alternativa_a">Até R$ 1.000</string>
    <string name="texto_q8_alternativa_b">De R$ 1.001 até R$ 5.000 </string>
    <string name="texto_q8_alternativa_c">De R$ 5.001 até R$ 10.000</string>
    <string name="texto_q8_alternativa_d">Acima de R$ 10.000</string>

    <!-- Questão 9 -->
    <string name="texto_q9_titulo">Qual o valor aproximado do seu patrimônio?</string>
    <string name="texto_q9_alternativa_a">Até R$ 10.000</string>
    <string name="texto_q9_alternativa_b">De R$ 10.001 até R$ 100.000</string>
    <string name="texto_q9_alternativa_c">De R$ 100.001 até R$ 500.000</string>
    <string name="texto_q9_alternativa_d">De R$ 500.001 até R$ 1.000.000</string>
    <string name="texto_q9_alternativa_e">Acima de R$ 1.000.001</string>

</resources>