<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questao8Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_titulo_q8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/texto_q8_titulo"/>

        <RadioGroup
            android:id="@+id/rg_q8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_q8_item_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_q8_alternativa_a" />

            <RadioButton
                android:id="@+id/rb_q8_item_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_q8_alternativa_b" />
            <RadioButton
                android:id="@+id/rb_q8_item_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_q8_alternativa_c" />
            <RadioButton
                android:id="@+id/rb_q8_item_d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_q8_alternativa_d" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_confirmar_q8"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirmar"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>