<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Questao5Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_titulo_q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/texto_q5_titulo"/>

        <RadioGroup
            android:id="@+id/rg_q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_q5_item_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_q5_alternativa_a" />

            <RadioButton
                android:id="@+id/rb_q5_item_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_q5_alternativa_b" />
            <RadioButton
                android:id="@+id/rb_q5_item_c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_q5_alternativa_c" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_confirmar_q5"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirmar"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>